third section added

--- a/index.html
+++ b/index.html
@@ -29,14 +29,31 @@
     </div>
     </section>
     <section class="section-2">
-            <div class="2-head-text"> Some random information</div>
-            <div class="2-body-content">
-             
+            <div class="two-head-text"> Some random information</div>
+            <div class="two-body-content">
+                <div class="info">
+                    <img src="./images/barberry.png" alt="barberry">
+                    <div class="text">This is a type of plant. We love this one.</div>
+                </div>
+                <div class="info">
+                    <img src="./images/chilli.png" alt="chili">
+                    <div class="text">This is another type of plant. Isn't it nice?</div>
+                </div>
+                <div class="info">
+                    <img src="./images/pepper.png" alt="pepper">
+                    <div class="text">We have so many plants. Yay plants.</div>
+                </div>
+                <div class="info">
+                    <img src="./images/saffron.png" alt="saffron">
+                    <div class="text">I'm running out of things to say about plants.</div>
+                </div>
             </div>
-            
-
-
-        </div>
+    </section>
+    <section class="section-3">
+      <div class="container-3"> 
+        <p class="quote"> This is an inspiring quote,or a testimonial from a customer.maybe it's just filling up space.</p>
+        <p class="quote-owner"> -Thor,God of Thunder</p>
+      </div>
     </section>
 
 </body>
