first dev-draft-complete

--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
         <p class="quote-owner"> -Thor,God of Thunder</p>
       </div>
     </section>
+    <section class="section-4">
+        <div class="c-t-a-box">
+          <div class="content-4l">
+            <div class="cta-header">Call to action.it's time</div>
+            <div class="cta-subtext">sign up by clicking on that button</div>
+          </div>
+          <div class="content-4r"><button class='signup-b4'>Sign up</button></div>
+        </div>
+
+    </section>
+    <footer>
+        <div class="copy-right"> Copyright © The Odin project 2021</div>
+    </footer>
 
 </body>
 </html>
